fix: add min-width: 0 to two-column container column to prevent flex overflow

--- a/foundation_cms/static/scss/blocks/themes/default/two_column_container_block.scss
+++ b/foundation_cms/static/scss/blocks/themes/default/two_column_container_block.scss
@@ -31,14 +31,13 @@
   }
 
   &__column {
+    flex: 1;
+    min-width: 0;
+
     .grid-container {
       padding-left: 0;
       padding-right: 0;
     }
-  }
-
-  .two-column-container__column {
-    flex: 1;
   }
 
   .newsletter-signup,
